--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,15 @@ dist.jar=${dist.dir}/Cifrado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.10.jar=C:\\Users\\user\\Desktop\\libs\\commons-codec-1.10.jar
 file.reference.commons-codec-1.10.jar-1=/home/Jona622/Desktop/Projects/Libs/commons-codec-1.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-codec-1.10.jar-1}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
